@@ -253,8 +253,6 @@ THESE ARE LOWER PRIORITY OR FOR FUTURE RELEASES
 
 * geometry viewing commands/visualizations of exploded levels
 
-* add command line help options to 'benchmark' tool
-
 * librt-based path tracer
 
 * system identifier application with sysctl-style information
